# src/dto/bookCopy.dto.ts
@@ -1,7 +1,9 @@
+import {BookDTO} from "./book.dto";
+
 export interface BookCopyDTO {
     id?: number;
     bookId: number;
-    status: number;
-    location: string;
-
+    state: number;
+    available: number;
+    book?: BookDTO;
 }
